chore: add jpackage steps