@@ -145,6 +145,11 @@ runtime {
                     // '--mac-signing-key-user-name', System.getenv('SIGNING_KEY_USER_NAME'),
                     // '--mac-signing-keychain', System.getenv('SIGNING_KEYCHAIN_PATH')
             ]
+            // 3 jpackage steps
+            // * /Library/Java/JavaVirtualMachines/jdk-21.jdk/Contents/Home/bin/jpackage --type app-image --input /Users/daniel/Documents/GitHub/Java11Test/build/install/hello-fx/lib --main-jar Java11Test-25.11.04.jar --main-class com.my_company.hellofx.Launcher --dest /Users/daniel/Documents/GitHub/Java11Test/build/jpackage --name hello-fx --app-version 25.11.04 --runtime-image /Users/daniel/Documents/GitHub/Java11Test/build/jre --java-options --add-opens=javafx.base/com.sun.javafx.event=ALL-UNNAMED --java-options --add-opens=javafx.base/com.sun.javafx.collections=ALL-UNNAMED --java-options --add-opens=javafx.base/com.sun.javafx.runtime=ALL-UNNAMED --java-options --add-opens=javafx.graphics/com.sun.javafx.scene=ALL-UNNAMED --java-options --add-opens=javafx.graphics/com.sun.javafx.scene.traversal=ALL-UNNAMED --java-options --add-opens=javafx.graphics/javafx.scene=ALL-UNNAMED --java-options --add-opens=javafx.controls/javafx.scene.control.skin=ALL-UNNAMED --java-options --add-opens=java.xml/com.sun.org.apache.xerces.internal.util=ALL-UNNAMED --mac-sign --icon src/main/deploy/package/macosx/hello.icns --mac-package-identifier com.my-company.hellofx
+            // * /Library/Java/JavaVirtualMachines/jdk-21.jdk/Contents/Home/bin/jpackage --type pkg --dest /Users/daniel/Documents/GitHub/Java11Test/build/jpackage --name hello-fx --app-version 25.11.04 --app-image /Users/daniel/Documents/GitHub/Java11Test/build/jpackage/hello-fx.app --app-version 25.11.04 --vendor "My Company" --copyright "My Company" --mac-sign
+            // * /Library/Java/JavaVirtualMachines/jdk-21.jdk/Contents/Home/bin/jpackage --type dmg --dest /Users/daniel/Documents/GitHub/Java11Test/build/jpackage --name hello-fx --app-version 25.11.04 --app-image /Users/daniel/Documents/GitHub/Java11Test/build/jpackage/hello-fx.app --app-version 25.11.04 --vendor "My Company" --copyright "My Company" --mac-sign
+
         } else if(os.windows) {
             imageOptions = ['--icon', 'src/main/deploy/package/windows/hello.ico']
             installerType = 'msi'
